--- a/virtual/Info.plist
+++ b/virtual/Info.plist
@@ -2,11 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleShortVersionString</key>
-	<string>1</string>
-	<key>CFBundleName</key>
-	<string>virtual</string>
 	<key>CFBundleIdentifier</key>
 	<string>io.endfinger.virtual</string>
+	<key>CFBundleName</key>
+	<string>virtual</string>
+	<key>CFBundleShortVersionString</key>
+	<string>$(MARKETING_VERSION)</string>
 </dict>
 </plist>
